project('kotek.core.api', 'version', '1', 'languages', 'cpp', default_options : ['default_library=static'])
cmake_cxx_standard = '20'
cmake_cxx_standard_required = 'ON'
# add_compile_options('$<$<CXX_COMPILER_ID:MSVC>:/MP>')
PROJECT_NAME_lib = static_library(project_name, 'src/main_api_dll.cpp', 'include/kotek_api.h', 'include/kotek_sdk_ui_element.h')
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.enum'])
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.types.numerics'])
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.containers.shared_ptr'])
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.containers.any'])
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.containers.string'])
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.containers.filesystem.path'])
