project('kotek.core.constants', 'version', '1', 'languages', 'cpp', default_options : ['default_library=static'])
cmake_cxx_standard = '20'
cmake_cxx_standard_required = 'ON'
PROJECT_NAME_lib = static_library(project_name, 'include/kotek_core_constants.h', 'src/main_core_constants_dll.cpp')
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.constants.math'])
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.constants.string'])
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.constants.ecs'])
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.constants.window'])
