project('kotek.core.containers.filesystem', 'version', '1', 'languages', 'cpp', default_options : ['default_library=static'])
cmake_cxx_standard = '20'
cmake_cxx_standard_required = 'ON'
PROJECT_NAME_lib = static_library(project_name, 'include/kotek_std_alias_filesystem.h', 'include/kotek_core_containers_filesystem.h', 'src/main_core_containers_filesystem_dll.cpp')
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.containers.filesystem.path'])
