project('kotek.core.containers.microsoft.wrl.comptr', 'version', '1', 'languages', 'cpp', default_options : ['default_library=static'])
cmake_cxx_standard = '20'
cmake_cxx_standard_required = 'ON'
PROJECT_NAME_lib = static_library(project_name, 'include/kotek_std_alias_microsoft_wrl_comptr.h', 'include/kotek_core_containers_microsoft_wrl_comptr.h', 'src/main_core_containers_microsoft_wrl_comptr_dll.cpp')
# target_link_libraries([project_name, 'PUBLIC', 'kotek.core.defines.static.os'])
